# sosreport-analyzer-ng

./: CONTRIBUTORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  common.c  configure.ac  hints  main.c  sosreport-analyzer-mcinfo.conf.example  sosreport-analyzer.conf.example  sosreport-analyzerd.conf.example
common/: common_line_data.h  global.c  global.h
conf/: sosreport-analyzer-mcinfo.conf.AXS4.example  sosreport-analyzer-mcinfo.conf.AXS6.example  sosreport-analyzer.conf.CentOS6.example  sosreport-analyzer.conf.CentOS7.example
lib/: cfg.h  common.h
libsar-analyzer/: Makefile.am  check.c  check.h  common.c  common.h  common_jp.c  line_data.c  line_data.h  make_report.c  make_report.h  sar_analyzer.c  sar_analyzer.h  sar_analyzer_jp.c  setter_getter.c  setter_getter.h
libsosreport-analyzer/: Makefile.am  cfg.c  cfg.h  common.c  common.h  line_data.c  line_data.h  setter_getter.c  setter_getter.h
patches/: japanese.patch
src/: cfg.c  common.c  common.h  line_data.c  line_data.h  main.c
